--- a/translations/messages.en.xlf
+++ b/translations/messages.en.xlf
@@ -1063,6 +1063,10 @@
         <source>extensions.button_disable</source>
         <target>Disable extension</target>
       </trans-unit>
+      <trans-unit id="beqzCkE" resname="login.header_login">
+        <source>login.header_login</source>
+        <target>Bolt &raquo; Login</target>
+      </trans-unit>
     </body>
   </file>
 </xliff>
