--- a/translations/messages.nl.xlf
+++ b/translations/messages.nl.xlf
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" version="1.2">
-  <file source-language="en" target-language="nl" datatype="plaintext" original="file.ext">
+  <file source-language="hu" target-language="nl" datatype="plaintext" original="file.ext">
     <header>
       <tool tool-id="symfony" tool-name="Symfony"/>
     </header>
@@ -845,6 +845,14 @@
       <trans-unit id="Wou02nK" resname="caption.kitchensink">
         <source>caption.kitchensink</source>
         <target>__caption.kitchensink</target>
+      </trans-unit>
+      <trans-unit id="73A2bWM" resname="finder.label_view">
+        <source>finder.label_view</source>
+        <target>__finder.label_view</target>
+      </trans-unit>
+      <trans-unit id="Em.C0bV" resname="listing_table.actions.button_edit">
+        <source>listing_table.actions.button_edit</source>
+        <target>__listing_table.actions.button_edit</target>
       </trans-unit>
     </body>
   </file>
