layout tweaks, removing the Hey in account, alignment of pager, fixed name for View website iso View [site title] for fixed button width

--- a/translations/messages.en.xlf
+++ b/translations/messages.en.xlf
@@ -792,19 +792,19 @@
     <unit id="XNTbZW6" name="action.visit_site">
       <segment>
         <source>action.visit_site</source>
-        <target>Visit site</target>
+        <target>Visit website</target>
       </segment>
     </unit>
     <unit id="KfVJho2" name="action.create_new">
       <segment>
         <source>action.create_new</source>
-        <target>Create new</target>
+        <target>Create a new</target>
       </segment>
     </unit>
     <unit id="b_RPpcB" name="general.greeting">
       <segment>
         <source>general.greeting</source>
-        <target>Hey, %name%!</target>
+        <target>%name%</target>
       </segment>
     </unit>
     <unit id="bmdn3u9" name="action.logout">
